[BUG]fix suggestion list cutoff issue (#2607)
In this PR, we fixed the suggestion list cutoff in an easy way.
We remove width 250px and add block display to allow browser to
select a width and add ellipsis at the bottom.

However, we might have longer input that can't fit into the search.
When we truncate the search, the elements look the same which might
be still an issue for customer usage. We definitely need more
feedbacks on the cutoff behavior.

Issue resolved:
https://github.com/opensearch-project/OpenSearch-Dashboards/issues/2555

--- a/src/plugins/data/public/ui/typeahead/_suggestion.scss
+++ b/src/plugins/data/public/ui/typeahead/_suggestion.scss
@@ -144,7 +144,7 @@ $osdTypeaheadTypes: (
   flex-grow: 0; /* 2 */
   flex-basis: auto; /* 2 */
   font-family: $euiCodeFontFamily;
-  width: 250px;
+  display: block;
   overflow: hidden;
   text-overflow: ellipsis;
   padding: $euiSizeXS $euiSizeS;
